# RayTracing

./: .gitignore  CMakeLists.txt  README.md
src/: common.hpp  main.cpp
src/cameras/: DepthCamera.cpp  DepthCamera.hpp  PinHoleCamera.cpp  PinHoleCamera.hpp  Ray.hpp  basic_camera.cpp  basic_camera.hpp
src/demo/: demo.hpp  demo_animation.cpp  demo_static.cpp  demo_transform.cpp
src/models/: AreaLight.hpp  Cube.cpp  Cube.hpp  Light.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ModelSet.cpp  ModelSet.hpp  Plane.cpp  Plane.hpp  PointLight.hpp  Primitive.hpp  Sphere.cpp  Sphere.hpp  SphereModel.hpp  Texture.hpp  Triangle.cpp  Triangle.hpp  basic_model.cpp  basic_model.hpp  model_util.cpp  model_util.hpp
src/scenes/: scene.hpp
src/utils/: AABB.cpp  AABB.hpp  BoundingBox.hpp  Box.cpp  Box.hpp  KD_Tree.cpp  KD_Tree.hpp  intersect_tool.cpp  intersect_tool.hpp
